# sugar-artwork

gtk3/theme/3.20/: gtk-widgets.css.em
icons/scalable/actions/: Makefile.am
icons/scalable/device/: Makefile.am
icons/scalable/emblems/: Makefile.am
